--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -172,6 +172,7 @@ p {
     padding: 30px 10px;
     background-color: $light-grey;
     text-align: center;
+    border-top: 1px solid $grey;
     .container {
         border-bottom: none;
     
